--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<prerequisites>
@@ -10,7 +8,7 @@
 
 	<groupId>nl.crashdata.crashdata-parent</groupId>
 	<artifactId>crashdata-parent</artifactId>
-	<version>1.29-SNAPSHOT</version>
+	<version>1.29</version>
 	<packaging>pom</packaging>
 
 	<name>CrashData parent pom</name>
@@ -36,7 +34,7 @@
 	<scm>
 		<url>https://github.com/haster/crashdata-parent</url>
 		<connection>scm:git:git@github.com:haster/crashdata-parent.git</connection>
-		<tag>HEAD</tag>
+		<tag>crashdata-parent-1.29</tag>
 	</scm>
 
 	<repositories>
@@ -478,7 +476,7 @@
 						<dependency>
 							<groupId>nl.crashdata.crashdata-parent</groupId>
 							<artifactId>crashdata-eclipse-settings</artifactId>
-							<version>1.29-SNAPSHOT</version>
+							<version>1.29</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -610,8 +608,7 @@
 									</dependency>
 								</dependencies>
 							</banDuplicateClasses>
-							<compound
-								implementation="com.github.ferstl.maven.pomenforcers.CompoundPedanticEnforcer">
+							<compound implementation="com.github.ferstl.maven.pomenforcers.CompoundPedanticEnforcer">
 								<!-- Enforcers -->
 								<enforcers>POM_SECTION_ORDER,DEPENDENCY_MANAGEMENT_ORDER,DEPENDENCY_ORDER,DEPENDENCY_CONFIGURATION,PLUGIN_MANAGEMENT_ORDER,PLUGIN_CONFIGURATION</enforcers>
 								<dependencyManagementOrderBy>scope,groupId,artifactId</dependencyManagementOrderBy>
@@ -819,7 +816,7 @@
 						<dependency>
 							<groupId>nl.crashdata.crashdata-parent</groupId>
 							<artifactId>crashdata-version-rules</artifactId>
-							<version>1.29-SNAPSHOT</version>
+							<version>1.29</version>
 						</dependency>
 					</dependencies>
 				</plugin>
