--- a/version-rules/pom.xml
+++ b/version-rules/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>nl.crashdata.crashdata-parent</groupId>
 		<artifactId>crashdata-parent</artifactId>
-		<version>1.30</version>
+		<version>1.31-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>crashdata-version-rules</artifactId>
