--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 		<version.jackson>2.9.9</version.jackson>
 		<version.junit.jupiter>5.5.1</version.junit.jupiter>
 		<version.junit.platform>1.5.1</version.junit.platform>
-		<version.slf4j>1.7.27</version.slf4j>
+		<version.slf4j>1.7.28</version.slf4j>
 		<version.wicket>8.5.0</version.wicket>
 	</properties>
 
@@ -205,6 +205,12 @@
 			
 			<dependency>
 				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>${version.slf4j}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${version.slf4j}</version>
 			</dependency>
@@ -297,13 +303,6 @@
 				<scope>test</scope>
 			</dependency>
 
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>1.7.26</version>
-				<scope>test</scope>
-			</dependency>
-			
 			<dependency>
 				<groupId>org.jboss.spec</groupId>
 				<artifactId>jboss-javaee-8.0</artifactId>
