--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<version.danekja>1.9.0</version.danekja>
-		<version.jackson>2.9.9</version.jackson>
-		<version.junit.jupiter>5.5.1</version.junit.jupiter>
-		<version.junit.platform>1.5.1</version.junit.platform>
-		<version.slf4j>1.7.28</version.slf4j>
-		<version.wicket>8.5.0</version.wicket>
+		<version.jackson>2.10.1</version.jackson>
+		<version.junit.jupiter>5.5.2</version.junit.jupiter>
+		<version.junit.platform>1.5.2</version.junit.platform>
+		<version.slf4j>1.7.30</version.slf4j>
+		<version.wicket>8.6.1</version.wicket>
 	</properties>
 
 	<dependencyManagement>
@@ -109,8 +109,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<!-- this version is databind only -->
-				<version>2.9.10.1</version>
+				<version>${version.jackson}</version>
 			</dependency>
 			
 			<dependency>
@@ -128,7 +127,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>28.0-jre</version>
+				<version>28.1-jre</version>
 				<exclusions>
 					<exclusion>
 						<groupId>com.google.code.findbugs</groupId>
@@ -147,6 +146,12 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.6</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>javax.json</groupId>
+				<artifactId>javax.json-api</artifactId>
+				<version>1.1.4</version>
 			</dependency>
 			
 			<dependency>
@@ -170,7 +175,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.5.9</version>
+				<version>4.5.10</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
@@ -237,7 +242,7 @@
 			<dependency>
 				<groupId>net.sourceforge.htmlunit</groupId>
 				<artifactId>htmlunit</artifactId>
-				<version>2.35.0</version>
+				<version>2.36.0</version>
 				<scope>test</scope>
 				<exclusions>
 					<exclusion>
@@ -292,7 +297,7 @@
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>htmlunit-driver</artifactId>
-				<version>2.35.1</version>
+				<version>2.36.0</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -664,7 +669,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.1.2</version>
+					<version>3.2.0</version>
 					<configuration>
 						<archive>
 							<index>true</index>
@@ -724,7 +729,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.2.0</version>
 					<inherited>true</inherited>
 					<executions>
 						<execution>
