--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 	<repositories>
 		<repository>
 			<id>maven-central</id>
-			<url>http://repo1.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -53,7 +53,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>maven-central</id>
-			<url>http://repo1.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -85,11 +85,11 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<version.danekja>1.9.0</version.danekja>
-		<version.jackson>2.10.1</version.jackson>
-		<version.junit.jupiter>5.5.2</version.junit.jupiter>
-		<version.junit.platform>1.5.2</version.junit.platform>
+		<version.jackson>2.11.0</version.jackson>
+		<version.junit.jupiter>5.6.2</version.junit.jupiter>
+		<version.junit.platform>1.6.2</version.junit.platform>
 		<version.slf4j>1.7.30</version.slf4j>
-		<version.wicket>8.6.1</version.wicket>
+		<version.wicket>8.8.0</version.wicket>
 	</properties>
 
 	<dependencyManagement>
@@ -121,13 +121,13 @@
 			<dependency>
 				<groupId>com.github.openjson</groupId>
 				<artifactId>openjson</artifactId>
-				<version>1.0.11</version>
+				<version>1.0.12</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>28.1-jre</version>
+				<version>29.0-jre</version>
 				<exclusions>
 					<exclusion>
 						<groupId>com.google.code.findbugs</groupId>
@@ -145,7 +145,7 @@
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.6</version>
+				<version>2.7</version>
 			</dependency>
 			
 			<dependency>
@@ -163,7 +163,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.12</version>
+				<version>4.13</version>
 			</dependency>
 			
 			<dependency>
@@ -175,7 +175,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.5.10</version>
+				<version>4.5.12</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
@@ -242,7 +242,7 @@
 			<dependency>
 				<groupId>net.sourceforge.htmlunit</groupId>
 				<artifactId>htmlunit</artifactId>
-				<version>2.36.0</version>
+				<version>2.41.0</version>
 				<scope>test</scope>
 				<exclusions>
 					<exclusion>
@@ -297,7 +297,7 @@
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>htmlunit-driver</artifactId>
-				<version>2.36.0</version>
+				<version>2.41.0</version>
 				<scope>test</scope>
 			</dependency>
 
