--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>nl.crashdata.crashdata-parent</groupId>
 	<artifactId>crashdata-parent</artifactId>
-	<version>1.33-SNAPSHOT</version>
+	<version>1.33</version>
 	<packaging>pom</packaging>
 
 	<name>CrashData parent pom</name>
@@ -34,7 +34,7 @@
 	<scm>
 		<url>https://github.com/haster/crashdata-parent</url>
 		<connection>scm:git:git@github.com:haster/crashdata-parent.git</connection>
-		<tag>HEAD</tag>
+		<tag>crashdata-parent-1.33</tag>
 	</scm>
 
 	<repositories>
@@ -473,7 +473,7 @@
 						<dependency>
 							<groupId>nl.crashdata.crashdata-parent</groupId>
 							<artifactId>crashdata-eclipse-settings</artifactId>
-							<version>1.33-SNAPSHOT</version>
+							<version>1.33</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -813,7 +813,7 @@
 						<dependency>
 							<groupId>nl.crashdata.crashdata-parent</groupId>
 							<artifactId>crashdata-version-rules</artifactId>
-							<version>1.33-SNAPSHOT</version>
+							<version>1.33</version>
 						</dependency>
 					</dependencies>
 				</plugin>
