WIP Backup for assurancetourix

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,13 @@
 			</dependency>
 			
 			<dependency>
+			    <groupId>org.apache.logging.log4j</groupId>
+			    <artifactId>log4j-core</artifactId>
+			    <version>2.12.1</version>
+			</dependency>
+			
+			
+			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-core</artifactId>
 				<version>${version.wicket}</version>
@@ -213,6 +220,12 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${version.slf4j}</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>org.slf4j</groupId>
+			    <artifactId>slf4j-log4j12</artifactId>
+			    <version>${version.slf4j}</version>
 			</dependency>
 			
 			<dependency>
