--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,14 @@
 				<version>3.141.59</version>
 				<scope>test</scope>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-bom</artifactId>
+				<version>9.4.44.v20210927</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>org.jboss.spec</groupId>
